2001-06-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:

	Add VideoLAN to the application list as the preferred player
	for MPEG files (http://www.videolan.org).
	
2001-05-24  Dan Winship  <danw@ximian.com>

	* gnome-vfs-mime-magic: Add an entry for text/x-vcard so they
	don't get misidentified as text/plain

2001-05-14  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:

	Add more flexible checks for script files to handle things like
	'#! /bin/sh'.
	
	* gnome-vfs.applications:

	Change GIMP to not allow URIs. This seems to malfunction on
	many copies of the GIMP in the file:// case.

2001-05-01  Seth Nickell  <snickell@stanford.edu>

	* data/mime/gnome-vfs-mime-magic:

	Add PHP support to the magic mime database.

2001-05-01  Darin Adler  <darin@eazel.com>

	* gnome-vfs.applications: Update entry for The Gimp so it
	knows that it can use http URLs.

2001-04-25  Darin Adler  <darin@eazel.com>

	* gnome-vfs.applications: Put in alphabetical order.

2001-04-23  John Sullivan  <sullivan@eazel.com>

	* gnome-vfs.keys.in: Added can_be_executable
	flag to text/x-python so they will work as Nautilus scripts.

2001-04-20  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.keys.in:
	Fix bug #7216, jbuilder in the application database but
	not listed for files of type text/x-java.
	
2001-03-01  Aaron Brick  <aaron@eazel.com>

	* added application/x-rar to the list of guitar's supported types
	in addition to its ambiguous alter-ego, /x-rar-compressed.

2001-02-28  Darin Adler  <darin@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fixed bug 7043, java files execute by default now.

	* gnome-vfs.keys.in: Removed the lines that make compiled java
	execute java by default. We can return to this issue later, along
	with the general issue of how to handle "execute-like" entries in
	this file. Most of the applications have "edit-like"
	behavior. Also removed the line that made the default for opening