@@ -361,6 +361,14 @@ pico
 	requires_terminal=true
 	mime_types=text/*,text/html,text/plain,text/x-c,text/x-c++,text/x-perl
 
+plaympeg
+	command=plaympeg
+	name=Simple MPEG Player (plaympeg)
+	can_open_multiple_files=false
+	expects_uris=false
+	requires_terminal=false
+	mime_types=video/mpeg
+
 realplayer
 	command=realplay
 	name=realplayer
